--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -648,6 +648,11 @@ video {
   margin-bottom: 7rem;
 }
 
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mb-20{
   margin-bottom: 5rem;
 }
@@ -694,6 +699,14 @@ video {
 
 .mt-profileMarginTop{
   margin-top: 155px;
+}
+
+.mr-10{
+  margin-right: 2.5rem;
+}
+
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
@@ -752,12 +765,32 @@ video {
   height: 40rem;
 }
 
+.h-96{
+  height: 24rem;
+}
+
+.h-72{
+  height: 18rem;
+}
+
 .max-h-index{
   max-height: 40rem;
 }
 
+.max-h-20{
+  max-height: 5rem;
+}
+
 .min-h-48{
   min-height: 12rem;
+}
+
+.min-h-9{
+  min-height: 2.25rem;
+}
+
+.min-h-20{
+  min-height: 5rem;
 }
 
 .w-10{
@@ -766,6 +799,10 @@ video {
 
 .w-12{
   width: 3rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .w-3\/4{
@@ -824,12 +861,44 @@ video {
   width: 50rem;
 }
 
+.w-16{
+  width: 4rem;
+}
+
+.w-32{
+  width: 8rem;
+}
+
+.w-24{
+  width: 6rem;
+}
+
+.w-28{
+  width: 7rem;
+}
+
+.max-w-8{
+  max-width: 2rem;
+}
+
+.max-w-14{
+  max-width: 3.5rem;
+}
+
+.max-w-20{
+  max-width: 5rem;
+}
+
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.resize-y{
+  resize: vertical;
 }
 
 .resize-x{
@@ -862,8 +931,16 @@ video {
   flex-direction: column;
 }
 
+.items-start{
+  align-items: flex-start;
+}
+
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-center{
@@ -926,6 +1003,10 @@ video {
   overflow: hidden;
 }
 
+.whitespace-normal{
+  white-space: normal;
+}
+
 .text-wrap{
   text-wrap: wrap;
 }
@@ -980,10 +1061,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.fill-white{
-  fill: #fff;
-}
-
 .p-10{
   padding: 2.5rem;
 }
@@ -1033,6 +1110,16 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pb-5{
   padding-bottom: 1.25rem;
 }
@@ -1059,6 +1146,14 @@ video {
 
 .pt-6{
   padding-top: 1.5rem;
+}
+
+.text-left{
+  text-align: left;
+}
+
+.text-start{
+  text-align: start;
 }
 
 .font-bodyFont{
@@ -1169,6 +1264,12 @@ video {
 
 .duration-700{
   transition-duration: 700ms;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .btn{
@@ -1310,10 +1411,18 @@ video {
   gap: 0.5rem;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.editCarsButton{
+  width: 3rem;
+  cursor: pointer;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  fill: #fff;
+  padding: 0.75rem;
+}
+
+.editCarsButton:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
 .checked\:bg-black:checked{
@@ -1335,11 +1444,6 @@ video {
 
 .hover\:transform:hover{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:bg-slate-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover{
