Dodata funkcija i za edit Cars uspesno!

--- a/views/editCars.ejs
+++ b/views/editCars.ejs
@@ -23,7 +23,7 @@
             </div>
             <% if(cars.length > 0){ %>
             <ul class="w-editPageProducts">
-                <li class="border-2 border-primary text-primary p-5 grid grid-cols-12 flex items-center">
+                <li class="border-2 border-primary text-primary p-5 grid grid-cols-12 items-center">
                     <p class="col-span-3">Car brand and model:</p>
                     <p class="col-span-1">Car year of production:</p>
                     <p class="col-span-2">Car price:</p>
@@ -31,64 +31,57 @@
                     <p class="col-span-2">Delete and edit car:</p>
                 </li>
                 <% for (car of cars) { %>
-                <li class="border-2 border-primary p-5 grid grid-cols-12">
-                    <div class="col-span-3 flex justify-center items-center gap-2 font-bold text-lg">
-                        <span class="carBrand_<%= car._id  %>"><%= car.brand.name  %></span>
-                        <span class="carModel_<%= car._id  %> w-52 whitespace-normal"><%= car.model %></span>
-                    </div>
-
-                    <div class="col-span-1 flex items-center">
-                        <span class="carYear_<%= car._id %>"><%= car.year  %></span>
-                    </div>
-                    <p class="flex col-span-2 justify-start items-center gap-2">
-                        <span class="carPrice_<%= car._id %>">
-                            <%= car.price %>
-                        </span>
-                        <span> $</span>
-                    </p>
-
-
-                    <p class="carDescription_<%= car._id %> col-span-4 flex items-center">
-                        <%= car.description %></p>
-
-                    <div class="col-span-2 flex gap-5 justify-center items-center">
-
-                        <div onclick="submitDelete('<%= car._id %>')" class="deleteButton editCarsButton">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <title>delete</title>
-                                <path
-                                    d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
-                            </svg>
+                <li>
+                    <form class="editForm_<%= car._id %> border-2 border-primary p-5 grid grid-cols-12" action=""
+                        method="post">
+                        <input class="hidden" name="carIdEdit" type="text" value="<%= car._id  %>">
+                        <div class="col-span-3 flex justify-center items-center gap-2 font-bold text-lg">
+                            <span class="carBrand_<%= car._id  %>"><%= car.brand.name  %></span>
+                            <span class="carModel_<%= car._id  %> w-52 whitespace-normal"><%= car.model %></span>
                         </div>
-
-                        <div onclick="handleEdit('<%= car._id %>')" class="editButton_<%= car._id  %> editCarsButton">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <title>pencil</title>
-                                <path
-                                    d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" />
-                            </svg>
+                        <div class="col-span-1 flex items-center">
+                            <span class="carYear_<%= car._id %>"><%= car.year  %></span>
                         </div>
-                        <div onclick="confirmEdit('<%= car._id %>')"
-                            class="confirmButton_<%= car._id %> editCarsButton hidden">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <title>check-bold</title>
-                                <path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z" />
-                            </svg>
-                        </div>
-                        <!-- Delete form 
-                                Pravim input model, dajem mu value car.model, da bih mogao uzeti njegovu vrednost u post metodi i prosleditit ga DELETE funkciji
-                            -->
-                        <form class="hidden deleteForm_<%= car._id  %>" action="" method="post" name="delete">
-                            <input name="carIdDelete" value="<%= car._id %>">
-                        </form>
+                        <p class="flex col-span-2 justify-start items-center gap-2">
+                            <span class="carPrice_<%= car._id %>">
+                                <%= car.price %>
+                            </span>
+                            <span> $</span>
+                        </p>
+                        <p class="carDescription_<%= car._id %> col-span-4 flex items-center">
+                            <%= car.description %></p>
 
-                        <!-- Edit form 
-                                Pravim input model, dajem mu value car.model, da bih mogao uzetmin-h-9i njegovu vrednost u post metodi i prosleditit ga EDIT funkciji
-                            -->
-                        <form class="hidden  confirmForm_<%= car._id %>" action="" method="post" name="edit">
-                            <input type="hidden" name="carIdEdit" value="<%= car._id %>">
-                        </form>
-                    </div>
+                        <div class="col-span-2 flex gap-5 justify-center items-center">
+                            <div onclick="submitDelete('<%= car._id %>')" class="deleteButton editCarsButton">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <title>delete</title>
+                                    <path
+                                        d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
+                                </svg>
+                            </div>
+                            <div onclick="handleEdit('<%= car._id %>')"
+                                class="editButton_<%= car._id  %> editCarsButton">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <title>pencil</title>
+                                    <path
+                                        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" />
+                                </svg>
+                            </div>
+                            <div onclick="confirmEdit('<%= car._id %>')"
+                                class="confirmButton_<%= car._id %> editCarsButton hidden">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <title>check-bold</title>
+                                    <path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z" />
+                                </svg>
+                            </div>
+                            <!-- Delete form
+                                    Pravim input model, dajem mu value car.model, da bih mogao uzeti njegovu vrednost u post metodi i prosleditit ga DELETE funkciji
+                                -->
+                        </div>
+                    </form>
+                    <form class="hidden deleteForm_<%= car._id  %>" action="" method="post" name="delete">
+                        <input class="hidden" name="carIdDelete" value="<%= car._id %>">
+                    </form>
                 </li>
                 <% }  %>
             </ul>
@@ -122,13 +115,12 @@
 
             carBrandOptions.forEach(brand => {
                 const brandOption = document.createElement("option");
-                console.log(brandOption.value)
                 brandOption.value = brand.textContent;
                 brandOption.text = brand.textContent
                 console.log(brandOption.value)
                 carBrandSelect.appendChild(brandOption)
             })
-            carBrandSelect.name = `carBrand_${carId}`;
+            carBrandSelect.name = "carBrand";
             carBrandSelect.className = "px-5 py-2";
             carBrand.parentNode.replaceChild(carBrandSelect, carBrand)
             // Car model edit
@@ -137,7 +129,7 @@
             const carModelValue = carModel.textContent.trim();
             const carModelInput = document.createElement("textarea");
             carModelInput.value = carModelValue;
-            carModelInput.name = `carModel_${carId}`
+            carModelInput.name = "carModel"
             carModelInput.className = "border-2 border-primary";
             carModel.parentNode.replaceChild(carModelInput, carModel)
 
@@ -148,7 +140,8 @@
             const carYearInput = document.createElement("input");
             carYearInput.type = "number";
             carYearInput.value = carYearValue;
-            carYearInput.name = `carYear_${carId}`
+            carYearInput.name = "carYear"
+            carYearInput.max = 2024;
             carYearInput.className = "w-24 px-4 py-2";
             carYear.parentNode.replaceChild(carYearInput, carYear)
 
@@ -159,7 +152,7 @@
             const carPriceInput = document.createElement("input");
             carPriceInput.type = "number";
             carPriceInput.value = carPriceValue;
-            carPriceInput.name = `carPrice_${carId}`
+            carPriceInput.name = "carPrice"
             carPriceInput.className = "w-32 px-4 py-2 text-start";
             carPrice.parentNode.replaceChild(carPriceInput, carPrice)
 
@@ -169,12 +162,12 @@
 
             const carDescriptionInput = document.createElement("textarea");
             carDescriptionInput.value = carDescriptionValue;
-            carDescription.name = `carDescription_${carId}`
+            carDescriptionInput.name = "carDescription"
             carDescriptionInput.className = "col-span-4 px-2 border-2 border-primary";
             carDescription.parentNode.replaceChild(carDescriptionInput, carDescription)
         }
         function confirmEdit(carId) {
-            const confirmEditForm = document.querySelector(`.confirmForm_${carId}`)
+            const confirmEditForm = document.querySelector(`.editForm_${carId}`)
             toogleEdit(carId)
             confirmEditForm.submit()
         }
