--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -582,10 +582,6 @@ video {
   top: 0px;
 }
 
-.top-10{
-  top: 2.5rem;
-}
-
 .top-14{
   top: 3.5rem;
 }
@@ -728,10 +724,6 @@ video {
   height: 1.25rem;
 }
 
-.h-72{
-  height: 18rem;
-}
-
 .h-auto{
   height: auto;
 }
@@ -836,10 +828,6 @@ video {
   width: 50rem;
 }
 
-.w-20{
-  width: 5rem;
-}
-
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -858,8 +846,8 @@ video {
           appearance: none;
 }
 
-.grid-cols-11{
-  grid-template-columns: repeat(11, minmax(0, 1fr));
+.grid-cols-12{
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .grid-cols-3{
@@ -874,16 +862,8 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
-.grid-cols-12{
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
-}
-
-.items-start{
-  align-items: flex-start;
 }
 
 .items-center{
@@ -958,10 +938,6 @@ video {
   white-space: normal;
 }
 
-.text-wrap{
-  text-wrap: wrap;
-}
-
 .rounded{
   border-radius: 0.25rem;
 }
@@ -1000,11 +976,6 @@ video {
 .bg-gray-600{
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-green-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .bg-white{
@@ -1046,14 +1017,14 @@ video {
   padding-right: 0.5rem;
 }
 
-.px-20{
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .py-10{
@@ -1069,11 +1040,6 @@ video {
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .pb-5{
@@ -1202,12 +1168,6 @@ video {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.transition-opacity{
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .duration-500{
@@ -1375,6 +1335,19 @@ video {
 .editCarsButton:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+.messageSuccess{
+  position: absolute;
+  top: 2.5rem;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  transition-duration: 500ms;
 }
 
 .checked\:bg-black:checked{
