--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -18,7 +18,7 @@
         <div class="flex flex-col items-center gap-32 bg-white 
         w-1/3 h-3/4 pt-10 row-span-4 pb-40 mx-auto rounded-xl">
             <h1 class="text-4xl underline tracking-wider">Sign in</h1>
-            <form class="flex flex-col gap-24" action="/login/password" method="post">
+            <form class="flex flex-col gap-24" action="" method="post">
                 <div class="flex flex-col gap-10">
                     <section class="flex items-center gap-2">
                         <svg class="w-12 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
